--- a/_posts/2020-03-12-cholog.md
+++ b/_posts/2020-03-12-cholog.md
@@ -25,6 +25,10 @@ _**[서비스 발표 영상 >](https://youtu.be/lQgI9r0On2M?t=1316)**_
 
 저 포함 주변에서도 식물을 키우는 친구들이 부쩍 늘어나면서, 식물 관리를 쉽게 기록할 수 있는 앱의 필요성을 많이 느꼈습니다. 그렇게 식물들의 성장을 간편하게 기록하고 관리하는 서비스 '초록'을 만들게 되었습니다.
 
+현재 커뮤니티 기능을 추가하고 있으며, 더 많은 사람이 서비스를 이용했으면 하는 마음에 텀블벅 펀딩을 진행하고 있습니다.
+
+_[텀블벅 펀딩 >](https://tumblbug.com/appcholog)_
+
 ### Main features
 
 - 식물 정보 등록 및 관리 기능
@@ -43,7 +47,7 @@ _**[서비스 발표 영상 >](https://youtu.be/lQgI9r0On2M?t=1316)**_
 
 유저가 식물의 상세정보를 볼 수 있도록 공공 API에서 데이터를 받아와 식물 정보 검색에 이용할 데이터베이스 구성. 총 314종의 식물 상세정보를 받아올 수 있음.
 
-식물 정보 검색 시 최초 1회에 한해 공공 API에 식물의 상세 정보 요청함. 받은 정보는 가공 후 데이터베이스에 저장함으로써 외부 API요청을 최소화함. 추가로 접근하지 않는 정보는 저장하지 않음으로써 데이터베이스 용량을 최적화함.
+식물 정보 검색 시 최초 1회에 한해 공공 API에 식물의 상세 정보 요청함. 받은 정보는 가공 후 데이터베이스에 저장함으로써 외부 API 요청을 최소화함. 추가로 접근하지 않는 정보는 저장하지 않음으로써 데이터베이스 용량을 최적화함.
 
 AWS S3에 이미지 업로드, 삭제 기능 구현. 더 이상 사용하지 않는 이미지를 삭제해서 불필요한 S3 용량 차지를 없앰.
 
