--- a/_posts/2020-02-12-3ideas.md
+++ b/_posts/2020-02-12-3ideas.md
@@ -23,8 +23,8 @@ _**[Github >](https://github.com/Team-Teslra/3ideas-Server)**_
 - 사용자들은 질문을 올리고, 답변을 달 수 있습니다.
 - 사용자들은 마음에 드는 답변을 추천할 수 있습니다.
 - 질문자는 받은 답변 중 베스트 3 답변을 선택합니다.
-- 답변 선택이 마감된 질문을 확인하면 베스트 3 답변만 우선적으로 표시됩니다.
-- 베스트 3 답변 외에도 추천수가 많은 순서대로 답변을 확인할 수 있습니다.
+- 답변 선택이 마감된 질문을 확인하면 베스트 3 답변만 표시됩니다.
+- 베스트 3 답변 외에도 추천 수가 많은 순서대로 답변을 확인할 수 있습니다.
 
 ### Stack
 
@@ -36,10 +36,9 @@ _**[Github >](https://github.com/Team-Teslra/3ideas-Server)**_
 
 JWT와 Token을 이용한 자동 로그인을 구현하여 잦은 로그아웃으로 인한 불편함 최소화.
 
-로그아웃 시 Blacklist테이블에 토큰을 저장하여 해당 토큰을 가진 유저는 유효하
-지 않은 토큰을 가진 것으로 판단하는 로직 추가. 만료되지 않은 토큰으로도 로그아웃을 할 수 있게 구현.
+로그아웃 시 Blacklist 테이블에 토큰을 저장하여 해당 토큰을 가진 유저는 유효하지 않은 토큰을 가진 것으로 판단하는 로직 추가. 만료되지 않은 토큰으로도 로그아웃을 할 수 있게 구현.
 
-ORM인 Sequelize의 OR과 LIKE기능을 사용해 등록된 질문글, 답변글 검색 기능 구현.
+ORM인 Sequelize의 OR과 LIKE 기능을 사용해 등록된 질문 글, 답변 글 검색 기능 구현.
 
 클라이언트가 보낼 수 있는 다양한 입력값에 대한 테스트를 바탕으로 예외처리 및 에러를 검토하여 상황에 따른 response 및 state 전송. 그를 통해 예상치 못한 서버 에러 발생을 최소화함.
 
@@ -50,6 +49,7 @@ AWS의 S3 버킷의 정적 웹 사이트 호스팅 기능을 활용하여 클라
 ## Service GIF
 
 <br/>
+
 _- login_
 ![Login](/assets/3ideas/01_Login.gif){: width="100%" height="100%"}
 
