:pencil: Add 회고록 in 3ideas

--- a/_posts/2020-02-12-3ideas.md
+++ b/_posts/2020-02-12-3ideas.md
@@ -12,6 +12,8 @@ _**[프로젝트 소개 문서 >](https://www.notion.so/Project-3-ideas-df56c48e
 
 _**[Github >](https://github.com/Team-Teslra/3ideas-Server)**_
 
+_**[회고 포스팅 >](https://ram-t.tistory.com/76)**_
+
 ---
 
 ## About
