:pencil: Update projects docs

--- a/_posts/2020-03-12-cholog.md
+++ b/_posts/2020-03-12-cholog.md
@@ -25,7 +25,7 @@ _**[서비스 발표 영상 >](https://youtu.be/lQgI9r0On2M?t=1316)**_
 
 저 포함 주변에서도 식물을 키우는 친구들이 부쩍 늘어나면서, 식물 관리를 쉽게 기록할 수 있는 앱의 필요성을 많이 느꼈습니다. 그렇게 식물들의 성장을 간편하게 기록하고 관리하는 서비스 '초록'을 만들게 되었습니다.
 
-현재 커뮤니티 기능을 추가하고 있으며, 더 많은 사람이 서비스를 이용했으면 하는 마음에 텀블벅 펀딩을 진행하고 있습니다.
+현재 커뮤니티 기능을 추가하고 있으며, 더 많은 사람이 서비스를 이용했으면 하는 마음에 텀블벅 펀딩을 진행했습니다.
 
 _[텀블벅 펀딩 >](https://tumblbug.com/appcholog)_
 
