:children_crossing: Add new tap opening feature in link

--- a/_posts/2020-02-12-3ideas.md
+++ b/_posts/2020-02-12-3ideas.md
@@ -8,11 +8,11 @@ position: "Back-end Developer"
 project-date: "2020.01"
 ---
 
-_**[프로젝트 소개 문서 >](https://www.notion.so/Project-3-ideas-df56c48e56604be7a1973a6ce49a5af2)**_
+_**[프로젝트 소개 문서 >](https://www.notion.so/Project-3-ideas-df56c48e56604be7a1973a6ce49a5af2){: target="\_blank"}**_
 
-_**[Github >](https://github.com/Team-Teslra/3ideas-Server)**_
+_**[Github >](https://github.com/Team-Teslra/3ideas-Server){: target="\_blank"}**_
 
-_**[회고 포스팅 >](https://ram-t.tistory.com/76)**_
+_**[회고 포스팅 >](https://ram-t.tistory.com/76){: target="\_blank"}**_
 
 ---
 
