--- a/_posts/2020-03-12-cholog.md
+++ b/_posts/2020-03-12-cholog.md
@@ -8,13 +8,13 @@ position: "Back-end Developer"
 project-date: "2020.02 ~ now"
 ---
 
-_**[프로젝트 소개 문서 >](https://www.notion.so/2-009900-ChoLog-d50b43f1fce84d22abebf225b59bb726)**_
+_**[프로젝트 소개 문서 >](https://www.notion.so/2-009900-ChoLog-d50b43f1fce84d22abebf225b59bb726){: target="\_blank"}**_
 
-_**[Github >](https://github.com/team009900/ChoLog-Server)**_
+_**[Github >](https://github.com/team009900/ChoLog-Server){: target="\_blank"}**_
 
-_**[회고 포스팅 >](https://ram-t.tistory.com/74)**_
+_**[회고 포스팅 >](https://ram-t.tistory.com/74){: target="\_blank"}**_
 
-_**[서비스 발표 영상 >](https://youtu.be/lQgI9r0On2M?t=1316)**_
+_**[서비스 발표 영상 >](https://youtu.be/lQgI9r0On2M?t=1316){: target="\_blank"}**_
 
 ---
 
@@ -27,7 +27,7 @@ _**[서비스 발표 영상 >](https://youtu.be/lQgI9r0On2M?t=1316)**_
 
 현재 커뮤니티 기능을 추가하고 있으며, 더 많은 사람이 서비스를 이용했으면 하는 마음에 텀블벅 펀딩을 진행했습니다.
 
-_[텀블벅 펀딩 >](https://tumblbug.com/appcholog)_
+_[텀블벅 펀딩 >](https://tumblbug.com/appcholog){: target="\_blank"}_
 
 ### Main features
 
